--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <!doctype html>
 <html amp lang="en">
   <head>
-    <meta charset="utf-8">
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <title>Hello, AMPs</title>
-    <link rel="canonical" href="http://example.ampproject.org/article-metadata.html">
-    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    
     
    
    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -47,7 +43,7 @@
 <script type="application/json">
   {
     "vars": {
-      "writeKey": "WRITE_KEY",
+      "writeKey": "cKHqUxb4Z16SqaR5DoYyQm74gyT7vbcB",
       "name": "My Page Name"
     }
     "triggers": {
