--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html amp lang="en">
   <head>
     <meta charset="utf-8">
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
+ <!-–  <script async src="https://cdn.ampproject.org/v0.js"></script> -->
     <title>Hello, AMPs</title>
     <link rel="canonical" href="http://example.ampproject.org/article-metadata.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
