--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
   {
     "vars": {
       "writeKey": "cKHqUxb4Z16SqaR5DoYyQm74gyT7vbcB",
-      "name": "My Page Name"
-    }
-  }
-  {
-    "vars": {
-      "writeKey": "WRITE_KEY",
-      "name": "My Page Name"
+      "name": "pruebatrack"
     }
     "triggers": {
       "click": {
