--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     "triggers": {
       "click": {
         "on": "click",
-        "selector": ".read-more-button",
+        "selector": "read-more-button",
         "request": "track",
         "vars": {
           "event": "Read More Clicked"
