--- a/index.html
+++ b/index.html
@@ -33,17 +33,7 @@
   {
     "vars": {
       "writeKey": "cKHqUxb4Z16SqaR5DoYyQm74gyT7vbcB",
-      "name": "pruebatrack"
-    }
-    "triggers": {
-      "click": {
-        "on": "click",
-        "selector": "read-more-button",
-        "request": "track",
-        "vars": {
-          "event": "Read More Clicked"
-        }
-      }
+      "name": "My Page Prueba"
     }
   }
 </script>
