--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
   <body>
   <amp-analytics type="segment">
 <script type="application/json">
+  
   {
     "vars": {
       "writeKey": "cKHqUxb4Z16SqaR5DoYyQm74gyT7vbcB",
       "name": "My Page Prueba"
+    }
+    "triggers": {
+      "click": {
+        "on": "click",
+        "selector": "read-more-button",
+        "request": "track",
+        "vars": {
+          "event": "Read More Clicked"
+        }
+      }
     }
   }
 </script>
